AiWCabal/.cabal-sandbox/logs/ghc-8.2.2/astar-0.3.0.0-4oykcIPDSHSKLNCqHDK7nR.log
cabal: Entering directory '/home/la1/Documents/MasterThesis/aiw2/astar-0.3.0.0'
Configuring astar-0.3.0.0...
Preprocessing library for astar-0.3.0.0..
Building library for astar-0.3.0.0..
[1 of 1] Compiling Data.Graph.AStar ( src/Data/Graph/AStar.hs, dist/dist-sandbox-146b36c0/build/Data/Graph/AStar.o )

src/Data/Graph/AStar.hs:10:1: error:
    Could not find module ‘Data.PSQueue’
    Use -v to see a list of the files searched for.
   |
10 | import qualified Data.PSQueue as PSQ
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

src/Data/Graph/AStar.hs:11:1: error:
    Could not find module ‘Data.PSQueue’
    Use -v to see a list of the files searched for.
   |
11 | import Data.PSQueue (PSQ, Binding(..), minView)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cabal: Leaving directory '/home/la1/Documents/MasterThesis/aiw2/astar-0.3.0.0'
